# DREAM3D

./: .clang-format  .clang-tidy  .commit-template  .floo  .flooignore  .git-commit-template  .gitattributes  .gitignore  .mailmap  .travis.yml  Acknowledgments.md  BuildSupportLibraries.sh  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.-1  CMakeLists.txt.user.3.2-pre1  CMakeLists.txt.user.3.3-pre1  CTestConfig.cmake  CodeToLatex.sh  Compiling.html  Contributing.md  Contributors.md  Copying.md  DocsUpdate.sh  HEDMAnalysisConstants.h  HEDMAnalysisPlugin.cpp  HEDMAnalysisPlugin.h  License.txt  License.txt.in  Linux-Build.sh  README.md  ReadMe-DREAM3D.md  ReadMe.md  ReadMe.txt  ReadMe.txt.in  ToDo.dox  ToDo.md  ToDo.txt  ToDoList.txt  appveyor.yml  (+4 more)
Documentation/: AIMRep.dox  AngFileImport.dox  CMakeLists.txt  Compiling.dox  DREAM3D_Manual.html  DREAM3D_V2_Manual.html  DREAM3D_v2_Manual.docx  FilterTemplate.md  H5VoxelVolume.dox  Index.dox  MicrostructurePresets.dox  Reconstruction.dox  StatsGenerator.dox  StructureReaders.dox  SurfaceMeshing.dox  SyntheticBuilder.dox  WritingPlugin.dox  index.html  mkdocs.yml
Documentation/APIDocs/: CMakeLists.txt
Documentation/Developer/: AddPrebuiltPipelines.md  AddingFilters.dox  AddingFilters.md  AddingUnitTest.md  CMakeLists.txt  CodeGuidelines.dox  CodeGuidelines.md  Compiling.dox  Compiling.md  Compiling_DREAM3D.md  Compiling_External_Libraries.md  DataContainerStrategies.dox  DataContainerStrategies.md  DevHelper_UserManual.md  DevelopmentNotes.md  H5EbsdFile.dox  H5EbsdFile.md  H5VoxelVolume.dox  H5VoxelVolume.md  Index.dox  JoeTuckerDevelopingStickingPoints.md  MetzFeedback.md  MicrostructurePresets.dox  MicrostructurePresets.md  Qt5 Build Notes.md  Qt5_Build_Notes.md  Qt5_Migration.md  StructureReaders.dox  StructureReaders.md  SurfaceMeshing.dox  SurfaceMeshing.md  V5Gui_Todo.md  Versioning.md  WritingPlugin.dox  WritingPlugin.md
Documentation/Filters/: FilterDocs.qrc  FilterDocs_Auto.qrc  Filters.qrc  Generated_FilterDocs.qrc  catalog.css  document.css  index.html
Documentation/Images/: DREAM3D_Images.tex
Documentation/Notes/: DevelopmentNotes.tex
Documentation/Old/: DREAM3D_Manual.docx  DREAM3D_v2_Manual.docx  Microstructure_Representation_Demo.docx
Documentation/ReferenceManual/: Acknowledgements.md  CMakeLists.txt  CreatingPipeline.md  DataStructure.md  Glossary.md  ImportExportPipelines.md  Index.dox  Index.md  UserInterface.md  index.md
Documentation/Tools/: GenerateHTMLDocs.cpp  HTMLDocs_Style.css  ToolConfiguration.h.in
Documentation/UserManual/: CMakeLists.txt  UserManual.dox  UserManual.md
Documentation/material-dream3d/: 404.html
Documentation/v3/: CMakeLists.txt  UserManual.dox
Source/ANG/: AngConstants.h  AngDirectoryPatterns.cpp  AngDirectoryPatterns.h  AngHeaderEntry.h  AngPhase.cpp  AngPhase.h  AngReader.cpp  AngReader.h  AngSetGetMacros.h  CMakeLists.txt  H5AngImporter.cpp  H5AngImporter.h  H5AngReader.cpp  H5AngReader.h  TSLAngDLLExport.h  TSLAngLibConfiguration.h.in
Source/CMU/: CMakeLists.txt  StatsGenerator.cpp  StatsGenerator.h  main.cpp
Source/DREAM3D/: CMakeLists.txt  DREAM3DConfiguration.h.in
Source/DREAM3DLib/: CMakeLists.txt  DREAM3DConfiguration.h.in  DREAM3DLibMacros.cmake
Source/DREAM3DWidgetsLib/: CMakeLists.txt  DREAM3DWidgetsLibConfiguration.h.in  DREAM3DWidgetsLibConstants.h  DREAM3DWidgetsLibDLLExport.h  DynamicTableData.h  FilterWidgetManager.cpp  FilterWidgetManager.h  IFilterWidgetFactory.cpp  IFilterWidgetFactory.h  PipelineFilterWidgetFactory.hpp  UpdateCheck.cpp  UpdateCheck.h  UpdateCheckData.cpp  UpdateCheckData.h
Source/EbsdLib/: AbstractEbsdFields.cpp  AbstractEbsdFields.h  CMakeLists.txt  EbsdConstants.h  EbsdHeaderEntry.h  EbsdImporter.h  EbsdLibConfiguration.h.in  EbsdLibDLLExport.h  EbsdMacros.h  EbsdMath.h  EbsdReader.cpp  EbsdReader.h  EbsdSetGetMacros.h  EbsdTransform.cpp  EbsdTransform.h  H5EbsdVolumeInfo.cpp  H5EbsdVolumeInfo.h  H5EbsdVolumeReader.cpp  H5EbsdVolumeReader.h  QualityMetricFilter.cpp  QualityMetricFilter.h
Source/FilterWidgets/: CMakeLists.txt  CodeGen.cpp.in  FilterManager.cpp.in  FilterManager.h.in  FilterWidgetCodeGen.cpp  FilterWidgetMacros.cmake  FilterWidgetsCodeGen.h.in  QFilterWidget.h  (+9 more)
Test/: AngDirectoryPatternTest.cpp  AngImportTest.cpp  AngleFileLoaderTest.cpp  CMakeLists.txt  CSVGrainDataReader.cpp  CSVGrainDataReader.h  CombineAttributeArraysTest.cpp  CombineAttributeMatricesTest.cpp  ConditionalSetValueTest.cpp  CreateDataArrayTest.cpp  CreateFeatureArrayFromElementArrayTest.cpp  CtfReaderTest.cpp  DREAM3DSettingsTest.cpp  DREAM3DTestFunctions.cmake  DRProcessing.cpp  DataArrayTest.cpp  DataContainerBundleTest.cpp  DataContainerTest.cpp  DxIOTest.cpp  EbsdImportTest.cpp  EbsdTests.cpp  ErrorMessageTest.cpp  FilterParameterCallbackExample.cpp  FilterParametersRWTest.cpp  FilterParametersReaderTest.cpp  FilterPipelineTest.cpp  FindNeighborsTest.cpp  GenerateFeatureIds.h  GenerateGrainIds.h  GenericFilter.cpp  GenericFilterTest.cpp  GrainDataReaderTest.cpp  H5LiteTest.cpp  H5UtilitiesTest.cpp  HedmReaderTest.cpp  LambertArrayRWTest.cpp  MXAFileSystemPathTest.cpp  ManagedPointerArrayTest.cpp  MoveDataTest.cpp  NewDataContainerStructureTest.cpp  (+39 more)
Tools/: AngReaderDump.cpp  AsciTileLayout.cpp  AxisAngleWidgetTest.cpp  BcfDumper.cpp  CMakeLists.txt  ComplexFilterGenerator.cpp  CreateWebServerJson.cpp  CtfReaderDump.cpp  DREAM3DFileStructure.cpp  DREAM3DFileStructure.h  DREAM3DFileStructure_Main.cpp  DocsToPdf.cpp  DocsToPdf.h.in  EbsdToTiff.cpp  ExamplePipelineCoverage.cpp  FilterParameterTool.cpp  FilterParameterTool_CREATE.cpp  FilterParameterTool_NEWINSTANCE.cpp  FilterParameterTool_REQUIRED.cpp  GenerateHTMLDocs.cpp  H5VoxelToVtk.cpp  HTMLDocs_Style.css  MATLAB_CodeGen.cpp  MakePoleFigure.cpp  ModifiedLambertTest.cpp  PhFileFixer.cpp  PhToHDF5.cpp  PipelineRunner.cpp  QtFilterTest.cpp  SandboxTool.cpp  TSLTriangle.cpp  TiffUtilities.cpp  TiffUtilities.h  ToolConfiguration.h.in  TriangleIntersectDemo.cpp  VolumeMeshMain.cpp  complex_CMakeLists.txt.in  complex_algorithm.cpp.in  complex_algorithm.hpp.in  complex_filter.cpp.in  (+6 more)
(+8089 files in other folders)
